refactor:入金管理